--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-facebook": "^2.0.0",
     "prettyjson": "^1.1.3",
     "raw.js": "^0.4.0",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "underscore": "^1.8.3"
   }
 }
