--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "raw.js": "^0.4.0",
     "request": "^2.65.0",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "node-inspector": "^0.12.3"
   }
 }
