--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.12.1",
     "feed-read": "0.0.1",
     "feedparser": "^1.1.4",
+    "grunt": "^0.4.5",
     "mongoose": "^4.2.5",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
@@ -43,6 +44,15 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.0",
+    "grunt-shell": "^1.1.2",
+    "jshint": "^2.8.0",
     "node-inspector": "^0.12.3"
   }
 }
