--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
     "feed-read": "0.0.1",
     "feedparser": "^1.1.4",
     "grunt": "^0.4.5",
-<<<<<<< HEAD
     "kerberos": "0.0.17",
     "mongodb": "^2.0.49",
-=======
->>>>>>> grunt mostly working, uglify has been disabled on build until we figure out angular stuff.
+    "kerberos": "0.0.17",
+    "mongodb": "^2.0.49",
     "mongoose": "^4.2.5",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
