--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
