--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-crontab": "^0.2.0",
     "grunt-nodemon": "^0.4.0",
     "grunt-shell": "^1.1.2",
     "grunt-shell-spawn": "^0.3.10",
